# interview

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
Math_Geometry/: .gitignore  CMakeLists.txt  README.md  main.cpp  matrix.cpp
Math_Geometry/geometry_algorithms/: CMakeLists.txt  Curvature.h  Distance.h  Geometry.h  Intersection.h  Projection.h  Segment_search.h  Side.h  utils.h
Math_Geometry/math/: CMakeLists.txt
Math_Geometry/math/Optimization/: Binary_Solve_Equation.cpp  CMakeLists.txt  Golden_Solve_Equation.cpp  GradientDescent_Extreme_Value_Multi_Variable.cpp  Gradient_Descent_Extreme_Value.cpp  Gradient_Descent_Solve_Equation.cpp  Lagrange_Interpolation.cpp  Newton_Extreme_Value.cpp  Newton_Solve_Equation.cpp  Quadratic_Solve_Equation.cpp  README.md  Simulated_Annealing.cpp  lhm_newton.cpp
QP_demo/: .gitignore  CMakeLists.txt  QP基础知识.md  README.md
QP_demo/src/: main.cpp  test.cpp
cpp_big_three/: CMakeLists.txt  big_three.cpp
geometry/: CMakeLists.txt  aabb_collision_check.cpp  calculate_curvature.cpp  check_convex_polygon.cpp  coordinate_transformation.cpp  utils.h  vector_angle_projection_position.cpp
huawei0410/: 1.cpp  3.cpp
huawei0410/0410/: 2.1.cpp  2.cpp  3.cpp
huawei0410/0522/: 1.cpp  2.cpp
jiushi/: CMakeLists.txt  a_star.cpp
math/: CMakeLists.txt  GradientDescent_Extreme_Value_Multi_Variable.cpp  Gradient_Descent_Extreme_Value.cpp  Gradient_Descent_Solve_Equation.cpp  Lagrange_Interpolation.cpp  Newton_Extreme_Value.cpp  Newton_Solve_Equation.cpp  Newtown_Sqrt.cpp  matrix.cpp
mulit_threads/: CMakeLists.txt  simple_threads.md  threads_demo.cpp
newton/: CMakeLists.txt  newton.cpp
own_class/: CMakeLists.txt  Singleton.cpp  shared_ptr.cpp
search/: CMakeLists.txt  a_star.cpp  dijkstra.cpp  weight_map_search.cpp
sensetime/: Bbox_collision_check.cpp  CMakeLists.txt  CoordinateSystemTransformation.cpp  angle_calculate.cpp  向量投影_点与向量位置关系.cpp
sort/: CMakeLists.txt  heap_sort.cpp  insert_sort.cpp  merge_sort.cpp  pop_sort.cpp  quick_sort.cpp  select_sort.cpp
